Actually check whether extension is in kiosk mode

Add the missing check for actually being in kiosk mode, but keep the
autotest bail to simplify testing of the feature.

BUG=chromium:826568
TEST=Ran autotest, verified that extension can't access edid.

Change-Id: I8f93e29d8d977b0977b3eb597ce2aae263b4e9b9
Reviewed-on: https://chromium-review.googlesource.com/982619
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Felix Ekblom <felixe@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548147}
Former-commit-id: 52d8147416a1006b8fd50bc13bf6781bdf38fb7e